syntax = "proto3";
package decimal.fee.v1;

import "gogoproto/gogo.proto";

option go_package = "bitbucket.org/decimalteam/go-smart-node/x/fee/types";

service Msg {
  rpc SaveBaseDenomPrice(MsgSaveBaseDenomPrice) returns (MsgSaveBaseDenomPriceResponse);
}

message MsgSaveBaseDenomPrice {
  string baseDenom = 1;
  float price = 2 [
    (gogoproto.customtype) = "float64",
    (gogoproto.nullable) = false
  ];
  string sender = 3;
}

message MsgSaveBaseDenomPriceResponse{}
